update JWT